# intelliconfig

./: .gitignore  LICENSE  README.md  pyproject.toml
src/intelliconfig/: __init__.py
src/intelliconfig/api/: server.py
src/intelliconfig/cli/: main.py
src/intelliconfig/core/: __init__.py  engine.py
src/intelliconfig/generator/: llmd_manifest.py  vllm_serve.py
tests/: test_api.py  test_core.py  test_generator.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts
